# log_parser

./: .gitignore  .pre-commit-config.yaml  app.env  config.py  docker-compose.yml  kafka_service.py  main.py  pyproject.toml  readme.md
app/: kafka_service.py  main.py  metrics.py  models.py
data/node1/: config.xml
data/node2/: config.xml
data/node3/: config.xml
data/node4/: config.xml
docker/: Dockerfile  docker-compose.yml
docker/data/node1/: config.xml
docker/data/node2/: config.xml
docker/data/node3/: config.xml
docker/data/node4/: config.xml
docker/prometheus/: prometheus.yml
